--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<h2>Container</h2>
+		<h2>Button Layout (clip-path polygons) only supported in Chrome</h2>
 		<div class="jumbotron">
 			<div style="height:100%" >
 			<a href="#"><img class="menu-img" style="clip-path: polygon(9% 18%, 25% 6%, 52% 51%, 0 51%, 1% 34%);" src="./images/Calendar.png" /></a>
